syntax = "proto3";

option csharp_namespace = "MusicMicroservice";


message AddUserRequest{
	string id = 1;
	string username = 2;
	string email = 3;
	int32 yearOfBirth = 4;
	string libraryId = 5;
}

message AddUserResponse{
}
