
syntax = "proto3";

option csharp_namespace = "MusicMicroservice";

import "UserEntities.proto";

service UsersGrpcService {
    rpc AddUser (AddUserRequest) returns (AddUserResponse);
}